First real commit added basically finished the UI and the first page of the game except the shop which will come at a later time

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="project.css">
 		<title>Dungen Master </title>
-	<head>
+	</head>
 	<body>
 		<header>Dungen Master</header>
 		<section>
