--- a/mainpage.html
+++ b/mainpage.html
@@ -2,17 +2,24 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="homescreen.css">
+		<script src="firstjavascript.js"></script>
 		<title>Home Screen </title>
 	</head>
-<body style="background-image: url(images/campsite.png);">
-<h1 style=" background-color:blue">A Very Important Heading </h1>
-<p style="background-color:yellow"> Lorem ipsum dolor sit amet , consectetur
-adipiscing elit , sed do eiusmod tempor incididunt ut labore et dolore
-magna aliqua . Ut enim ad minim veniam , quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat . Duis aute
-irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur . Excepteur sint occaecat cupidatat non proident ,
-sunt in culpa qui officia deserunt mollit anim id est laborum . </p>
-</body>
+	<body>
+		<header>Campsite</header>
+
+		<aside class="leftInv">Hello<br> World </aside>
+
+		<p id="dialogBox"> You awaken in your campsite surrounded by rubble. <br> </p>
+
+		<aside class="rightInv"> Hello <br> Again </aside>
+
+		<h2 class="karma"> Karma : 0 </h2>
+		<h2 class="health"> Health : 100 </h2>
+		<button id="button1" onclick="askAround()"> Ask Around </button>
+		<button id="button2" onclick="followFootsteps()"> Follow Footsteps </button>
+		<button id="button3"> Shop </button>
+		<button id="button4" onclick="campFire()" > Sit by the campfire </button>
+	</body>
 
 <html>
