Finished base layer of game and many of its features, still requires some polishing up and sounds added to it.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<section>
 			Welcome to dungen master, my html built game where you make youre way through dungens fighting different opponants and upgrading your arsonal!<br/> <br/>
 			You're awakened to he sounds of screaming coming from outside your tent!<br/> <br/>
-			Your heart drops as you immedietly recognise the screams as your sons, you shoot up, grab your rusted sword and spint to your sons neighboring tent as fast as you can.<br/><br/> Although this sprint is cut short immedietly after leaving your tent you are struck in the stomach by with what seems to be a massive log. You fly back around 5 metres and hit the floor, you feel yourself drifting off from the pain your vision is slowly turning to black, but right before you pass out you see your son being dragged away as he screams for you to help him...
+			Your heart drops as you immedietly recognise the screams as your sons, you shoot up, grab your rusted sword and spint to your sons neighboring tent as fast as you can.<br/><br/> Although this sprint is cut short. Immedietly after leaving your tent you are struck in the stomach by with what seems to be a massive log. You fly back around 5 metres and hit the floor, you feel yourself drifting off from the pain your vision is slowly turning to black, but right before you pass out you see your son being dragged away as he screams for you to help him...
 		</section>
 		<a href="mainpage.html">
 			<h1>
