--- a/mainpage.html
+++ b/mainpage.html
@@ -4,18 +4,35 @@
 		<link rel="stylesheet" type="text/css" href="homescreen.css">
 		<script src="firstjavascript.js"></script>
 		<title>Home Screen </title>
+		<script> // need to initalise these values here so they are only set once. As this page is only accessed once at the start of the game
+			//essentials
+		 	localStorage.health_points ="25";
+		 	localStorage.karma_points ="0";
+		 	localStorage.num_coins ="0";
+		 	// gear
+		 	localStorage.machete ="false";
+		 	localStorage.torch = "false";
+		 	localStorage.grapple = "false";
+		 	localStorage.explosive = "false";
+		 	//making sure you cant do an event twice
+		 	localStorage.traveller = "false";
+		 	localStorage.campsite = "false";
+		 	localStorage.house = "false";
+		 	localStorage.cavemonster = "false";
+		 	localStorage.cavechild = "false";
+		</script>
 	</head>
-	<body>
+	<body onload="essentials()">
 		<header>Campsite</header>
 
-		<aside class="leftInv">Hello<br> World </aside>
+		<aside class="leftInv">Machete: <span id="machete"></span><br>Torch: <span id="torch"></span><br>GrappleHook: <span id="hook"></span><br>Explosives: <span id="explosive"></span></aside>
 
 		<p id="dialogBox"> You awaken in your campsite surrounded by rubble. <br> </p>
 
-		<aside class="rightInv"> Hello <br> Again </aside>
+		<aside class="rightInv"> Coins: <br><span id="money"></span> </aside>
 
-		<h2 class="karma"> Karma : 0 </h2>
-		<h2 class="health"> Health : 100 </h2>
+		<h2 class="karma"> Karma : <span id="karmabar"></span> </h2>
+		<h2 class="health"> Health : <span id="healthbar"></span> </h2>
 		<button id="button1" onclick="askAround()"> Ask Around </button>
 		<button id="button2" onclick="followFootsteps()"> Follow Footsteps </button>
 		<button id="button3"> Shop </button>
