--- a/clifftop.html
+++ b/clifftop.html
@@ -4,13 +4,24 @@
 		<link rel="stylesheet" type="text/css" href="clifftop.css">
 		<script src="firstjavascript.js"></script>
 		<title>Dungeon Master - Clifftop </title>
-	<head>
+		<script>
+			document.addEventListener('click', musicPlay);
+			function musicPlay() {
+    			document.getElementById('cliff').play();
+    			document.removeEventListener('click', musicPlay);
+			}
+		</script>
+	</head>
 	<body onload="essentials()" style="background-image: url('images/clifftop.jpg');">
 		<header>Clifftop</header>
 
+		<audio id="cliff" loop autoplay>
+   			 <source src="sounds/clifftop.wav" type="audio/wav">
+		</audio>
+
 		<aside class="leftInv">Machete: <span id="machete"></span><br>Torch: <span id="torch"></span><br>GrappleHook: <span id="hook"></span><br>Explosives: <span id="explosive"></span></aside>
 
-		<p id="dialogBox"> You reach the top of the cliff just to realise theres not much up here. <br> But you can see what seems to be smoke in the distance. </p>
+		<p id="dialogBox"> You reach the top of the cliff just to realise theres not much up here other than a nearby waterfall. <br> But you can see some smoke in the distance. </p>
 
 		<aside class="rightInv"> Coins: <br><span id="money"></span> </aside>
 
