--- a/deepforest.html
+++ b/deepforest.html
@@ -4,9 +4,19 @@
 		<link rel="stylesheet" type="text/css" href="deepforest.css">
 		<script src="firstjavascript.js"></script>
 		<title>Dungeon Master - Deep Forest </title>
-	<head>
+		<script>
+			document.addEventListener('click', musicPlay);
+			function musicPlay() {
+    			document.getElementById('deepforest').play();
+    			document.removeEventListener('click', musicPlay);
+			}</script>
+	</head>
 	<body onload="essentials()">
 		<header id="header">Deep Forest</header>
+
+		<audio id="deepforest" loop autoplay>
+   			 <source src="sounds/deepforest.wav" type="audio/wav">
+		</audio>
 
 		<aside class="leftInv">Machete: <span id="machete"></span><br>Torch: <span id="torch"></span><br>GrappleHook: <span id="hook"></span><br>Explosives: <span id="explosive"></span></aside>
 
