--- a/riverside.html
+++ b/riverside.html
@@ -4,9 +4,24 @@
 		<link rel="stylesheet" type="text/css" href="forrest.css">
 		<script src="firstjavascript.js"></script>
 		<title>Dungeon Master - Riverside </title>
-	<head>
+		<script>
+			document.addEventListener('click', musicPlay);
+			function musicPlay() {
+    			document.getElementById('forest').play();
+    			document.getElementById('river').play();
+    			document.removeEventListener('click', musicPlay);
+			}
+		</script>
+	</head>
 	<body onload="essentials()">
 		<header>Riverside</header>
+
+		<audio id="forest" loop autoplay>
+   			 <source src="sounds/forest.wav" type="audio/wav">
+		</audio>
+		<audio id="river" loop autoplay>
+   			 <source src="sounds/river.wav" type="audio/wav">
+		</audio>
 
 		<aside class="leftInv">Machete: <span id="machete"></span><br>Torch: <span id="torch"></span><br>GrappleHook: <span id="hook"></span><br>Explosives: <span id="explosive"></span></aside>
 
