--- a/temple.html
+++ b/temple.html
@@ -4,10 +4,19 @@
 		<link rel="stylesheet" type="text/css" href="temple.css">
 		<script src="firstjavascript.js"></script>
 		<title>Dungeon Master - Temple </title>
-		
-	<head>
+		<script>
+			document.addEventListener('click', musicPlay);
+			function musicPlay() {
+    			document.getElementById('lava').play();
+    			document.removeEventListener('click', musicPlay);
+			}</script>
+	</head>
 	<body onload="essentials()">
 		<header>Temple</header>
+
+		<audio id="lava" loop autoplay>
+   			 <source src="sounds/temple.wav" type="audio/wav">
+		</audio>
 
 		<aside class="leftInv">Machete: <span id="machete"></span><br>Torch: <span id="torch"></span><br>GrappleHook: <span id="hook"></span><br>Explosives: <span id="explosive"></span></aside>
 
